--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,4 @@ exportPattern("^[[:alpha:]]+")
 importFrom("stats", "median", "sd", "na.omit")
 importFrom("plyr", "round_any")
 importFrom("graphics", "image")
+importFrom("reshape", "melt")
