--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,39 @@
+export(calc2Node)
+export(calcAD)
+export(calcATHBpmv)
+export(calcATHBpts)
+export(calcATHBset)
+export(calcCE)
+export(calcComfInd)
+export(calcDisc)
+export(calcET)
+export(calcHbExSteady)
+export(calcHbExUnsteady)
+export(calcIso7933)
+export(calcMixR)
+export(calcPD)
+export(calcPMV)
+export(calcPMVGagge)
+export(calcPMVPPD)
+export(calcPMVStar)
+export(calcPMVadj)
+export(calcPPD)
+export(calcPS)
+export(calcPTS)
+export(calcPtsa)
+export(calcPtse)
+export(calcSET)
+export(calcSkinWettedness)
+export(calcSolarGain)
+export(calcTNZPDF)
+export(calcTSens)
+export(calcUTCI)
+export(calcVTG)
+export(calcaPMV)
+export(calcdTNZ)
+export(calcePMV)
+export(calctAdapt15251)
+export(createCond)
 exportPattern("^[[:alpha:]]+")
 importFrom("stats", "median", "sd", "na.omit")
 importFrom("plyr", "round_any")
