--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calcDisc)
 export(calcET)
 export(calcHbExSteady)
 export(calcHbExUnsteady)
+export(calcIREQ)
 export(calcIso7933)
 export(calcMixR)
 export(calcPD)
@@ -22,11 +23,13 @@ export(calcPS)
 export(calcPTS)
 export(calcPtsa)
 export(calcPtse)
+export(calcRT)
 export(calcSET)
 export(calcSkinWettedness)
 export(calcSolarGain)
 export(calcTNZPDF)
 export(calcTSens)
+export(calcTWC)
 export(calcUTCI)
 export(calcVTG)
 export(calcaPMV)
@@ -39,3 +42,4 @@ importFrom("stats", "median", "sd", "na.omit")
 importFrom("plyr", "round_any")
 importFrom("graphics", "image")
 importFrom("reshape", "melt")
+
