--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Functions for Thermal Comfort Research
 Version: 0.1.10
 Date: 2021-01-30
 Imports: plyr, graphics, reshape
-Author: Marcel Schweiker [aut, cre] and Sophia Mueller [aut] and Michael Kleber [ctr] and Boris Kingma [ctr] and Masanori Shukuya [ctr]
+Author: Marcel Schweiker [aut, cre] and Sophia Mueller [aut] and Michael Kleber [ctr] and Boris Kingma [ctr] and Masanori Shukuya [ctr] and Shaomi Rahman [ctr] and Shoaib Sarwar [ctr] 
 Maintainer: Marcel Schweiker <marcel.schweiker@kit.edu>
 Description: Functions to calculate various common and less common thermal comfort indices, convert physical variables, and evaluate the performance of thermal comfort indices.
 License: GPL-2
