--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,53 +1,7 @@
-export(calc2Node)
-export(calcAD)
-export(calcATHBpmv)
-export(calcATHBpts)
-export(calcATHBset)
-export(calcAvgAcc)
-export(calcBias)
-export(calcCE)
-export(calcComfInd)
-export(calcDisc)
-export(calcET)
-export(calcHbExSteady)
-export(calcHbExUnsteady)
-export(calcIREQ)
-export(calcIso7933)
-export(calcMixR)
-export(calcPD)
-export(calcPMV)
-export(calcPMVGagge)
-export(calcPMVPPD)
-export(calcPMVStar)
-export(calcPMVadj)
-export(calcPPD)
-export(calcPS)
-export(calcPTS)
-export(calcPtsa)
-export(calcPtse)
-export(calcRT)
-export(calcSET)
-export(calcSkinWettedness)
-export(calcSolarGain)
-export(calcTNZPDF)
-export(calcTPRTSV)
-export(calcTSens)
-export(calcTWC)
-export(calcTroin)
-export(calcUTCI)
-export(calcVTG)
-export(calcaPMV)
-export(calcapCoeff)
-export(calcasCoeff)
-export(calcdTNZ)
-export(calcePMV)
-export(calcepCoeff)
-export(calcesCoeff)
-export(calctAdapt15251)
-export(createCond)
-export(cutTSV)
 exportPattern("^[[:alpha:]]+")
 importFrom("stats", "median", "sd", "na.omit")
 importFrom("plyr", "round_any")
 importFrom("graphics", "image")
 importFrom("reshape", "melt")
+importFrom("jsonlite", "fromJSON")
+
