adjust desription and fix bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ importFrom("plyr", "round_any")
 importFrom("graphics", "image")
 importFrom("reshape", "melt")
 importFrom("jsonlite", "fromJSON")
-
+importFrom(nleqslv, nleqslv)
